# opa-examples

./: .gitignore  README.md
go_auth/: README.md  authz.rego  go.mod  main.go
go_concert/: README.md  go.mod  go.sum  main.go  policy.rego  policy_test.rego
python_auth/: README.md  app.py  authz.rego  pyproject.toml
terraform/: README.md  main.tf  opa_verify.sh  policy.rego
