[tool.poetry]
name = "python-auth"
version = "0.1.0"
description = ""
authors = ["yowainwright <yowainwright@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_auth"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
